Fixed some alignment issues

--- a/mission-ceramics/src/styles/Gallery.scss
+++ b/mission-ceramics/src/styles/Gallery.scss
@@ -81,3 +81,9 @@
   opacity: 0.5;
   cursor: pointer;
 }
+
+hr {
+  margin-block-start: 0;
+  margin-block-end: 50px;
+  width: 89%;
+}
