--- a/mission-ceramics/src/styles/Nav.scss
+++ b/mission-ceramics/src/styles/Nav.scss
@@ -19,28 +19,41 @@
   margin-block-end: 1em;
   margin-inline-start: 0px;
   margin-inline-end: 0px;
-  padding-inline-start: 80px;
+  padding-inline-start: 15%;
 }
 
 .nav-links a {
   text-decoration: none;
   color: black;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .nav-links li {
-  margin: 0 0 10px 0;
+  margin: 0 0 20px 0;
 }
 
 .logo {
   display: block;
   margin: auto;
-  padding-top: 80px;
-  margin-bottom: 32px;
+  padding-top: 60px;
+  padding-bottom: 60px;
   width: 10rem;
 }
 
 .active li{
   color: #B92227;
   text-decoration: underline;
+}
+
+.wrapper {
+  display: flex;
+}
+
+.copyright {
+  padding-top: 50px;
+  font-size: 12px;
+  display: block;
+  margin: auto;
+  color: grey;
+  align-self: flex-end;
 }
